k8s/selenium-chrome-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome-node
  labels:
    app: selenium-node-chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      volumes:
      - name: dshm
        emptyDir:
          sizeLimit: "5120Mi"
          medium: Memory
      containers:
      - name: selenium4-node-chrome
        image: selenium/node-chrome:4.6.0
        ports:
          - containerPort: 5553
          - containerPort: 5555
        volumeMounts:
          - mountPath: /dev/shm
            name: dshm
        resources:
          requests:
            memory: "1Gi"
            cpu: "2"
            ephemeral-storage: "2Gi"
