k8s/selenium4-hub-components.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  labels:
    app: selenium4-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium4-hub
  template:
    metadata:
      labels:
        app: selenium4-hub
    spec:
      containers:
      - name: selenium4-hub
        image: selenium/hub:4.6.0
        ports:
          - containerPort: 4442
          - containerPort: 4443
          - containerPort: 4444
        livenessProbe:
          httpGet:
            path: /status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5
