k8s/selenium-hub-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  labels:
    app: selenium-hub
spec:
  ports:
    - name: event-publish
      protocol: TCP
      port: 4442
      targetPort: 4442
    - name: event-subscribe
      protocol: TCP
      port: 4443
      targetPort: 4443
    - name: node-grid
      protocol: TCP
      port: 4444
      targetPort: 4444
  selector:
    app: selenium-hub
