k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: selenium4-hub
  namespace: selenium4-hub
spec:
  rules:
  - host: selenium-hub
    http:
      paths:
      - path: /
        backend:
          serviceName: selenium-hub
          servicePort: 4444
